--- a/Ebackend/static/css/style.css
+++ b/Ebackend/static/css/style.css
@@ -17,7 +17,7 @@ header{
     flex-wrap: nowrap;
     justify-content: space-around;
     align-items: center;
-    position:sticky;
+    position:fixed;
     top:0;
     right:0;
     left:0;
@@ -25,12 +25,13 @@ header{
     background-color:white;
 }
 
-.logo{
+.logo+ a{
     font-weight: 400;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     color:orange;
     cursor:pointer;
+    text-decoration: none;
 }
 #chair-txt{
     font-size:16px;
@@ -55,10 +56,27 @@ header{
     border-bottom:solid 2px orange;
 }
 
-.float-right{
-    margin-left: auto;
+.logs{
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    width:fit-content;
+    padding: 8px;
+}
+
+.logs > li{
+    margin:5px;
+    list-style: none;
+    text-align: center;
+    font-weight: 100;
+    border-radius: 15px;
     background-color: lightblue;
-    border-radius: 10px;
+    padding:5px;
+}
+
+.logos > li a{
+    text-decoration: none;
+    color:black;
 }
 
 /* mobile nav */
