--- a/Ebackend/template/base.html
+++ b/Ebackend/template/base.html
@@ -8,8 +8,6 @@
         <link rel="stylesheet" href="../static/css/style.css" type="text/css">
         <link rel="stylesheet" href="../static/css/signin_nd_up.css">
         <link rel="icon" type="img/jpg" href="">
-        <script src="https://kit.fontawesome.com/b7a792697d.js" crossorigin="anonymous"></script>
-        <script src="../static/js/index.js"></script>
     </head>
     <body>
         <header>
@@ -39,7 +37,7 @@
             </div>
         </header>
         <!-- mobile -->
-        <ul class="nav-list-mobile">
+        <ul class="nav-list-mobile mobile-list">
             <li><a href="">Mattress</a></li>
             <li><a href="">Bedroom</a></li>
             <li><a href="">Living Room</a></li>
@@ -52,7 +50,7 @@
     <footer>
         <div class="Links">
             <h5 class="quick-links" onclick="displayLink()">Quick Links</h5>
-            <div class="buyer-seller">
+            <div class="b-seller">
                 <a href='' id="be-a-vendor"> Be a vendor</a>
                 <a href='' id="registered-buyer">Register as a buyer</a>
                 <a href='' id="affiliate">Be an affiliate</a>
@@ -70,4 +68,6 @@
             <a href='' id="terms-of-service">Terms of Services</a>
         </div>
     </footer>
+    <script src="../static/js/index.js"></script>
+    <script src="https://kit.fontawesome.com/b7a792697d.js" crossorigin="anonymous"></script>
 </html>
