--- a/Ebackend/static/css/signin_nd_up.css
+++ b/Ebackend/static/css/signin_nd_up.css
@@ -46,7 +46,7 @@ button:hover{
     flex-flow: column wrap;
     justify-content: center;
     max-width: fit-content;
-    margin-top:3%;
+    margin-top:8%;
     font-size: 15px;
     font-weight: 100;
 }
@@ -66,7 +66,7 @@ div.sign-up-guide, .signup-form{
 }
 
 div.sign-up-guide{
-    margin-top:5%;
+    margin-top:10%;
 }
 
 .signup-form{
@@ -114,7 +114,6 @@ div.sign-up-guide{
 
 .success{
     margin:auto;
-    margin-top:20px;
     text-align: center;
     width:fit-content;
     padding:5px;
@@ -125,11 +124,15 @@ div.sign-up-guide{
 
 .error{
     margin:auto;
-    margin-top:20px;
     text-align: center;
     width:fit-content;
     padding:5px;
     background-color: lightcoral;
     color:white;
     border-radius:15px;
+}
+
+.message{
+    margin-top: 10%;
+    margin-bottom:-9%;
 }
