--- a/Ebackend/template/profile.html
+++ b/Ebackend/template/profile.html
@@ -14,7 +14,7 @@
                 <h4 class="name">{{name}}</h4>
             </div>
             <div class="my_products">
-                <h5 id="my-products"> My products</h5>
+                <h5 id="my-products"> Your products</h5>
                 {%for item in name.product_set.all%}
                     <div class="products">
                         <h5 id="prod-name">{{item.product_name}}</h5>
