--- a/Ebackend/template/signup.html
+++ b/Ebackend/template/signup.html
@@ -6,7 +6,7 @@
 {%block content%}
 {%if msgs%}
     {%for msg in msgs%}
-    <div {%if msg.tags%} class="{{msg.tags}}"{%endif%}>{{msg}}</div>
+    <div {%if msg.tags%} class="{{msg.tags}} message"{%endif%}>{{msg}}</div>
     {%endfor%}
 {%endif%}
 <div class="sign-up-guide">Sign-up here</div>
