--- a/Ebackend/template/checkout.html
+++ b/Ebackend/template/checkout.html
@@ -1,6 +1,6 @@
 {%extends 'base.html'%}
 {%block title%}check out{%endblock%}
-
+{%block logout%}{%endblock%}
 <!-- custom content -->
 {%block content%}
 
