--- a/Ebackend/template/base.html
+++ b/Ebackend/template/base.html
@@ -13,10 +13,10 @@
         <header>
             <div class="logo"><a href="{%url 'home'%}">B<span id="chair-txt">chair</span></a></div>
             <ul class="nav-list">
-                <li><a href="">Mattress</a></li>
-                <li><a href="">Bedroom</a></li>
-                <li><a href="">Living Room</a></li>
-                <li><a href="">Kid Room</a></li>
+                <li><a href="#mattress">Mattress</a></li>
+                <li><a href="#bedroom">Bedroom</a></li>
+                <li><a href="#living-room">Living Room</a></li>
+                <li><a href="#kid-room">Kid Room</a></li>
             </ul>
             <!-- login logout buttons -->
             <div class="logs">
