--- a/Ebackend/static/css/style.css
+++ b/Ebackend/static/css/style.css
@@ -175,7 +175,7 @@ body{
     margin: auto;
     margin:auto;
 }
-.big-img> img{
+.big-img > #img-link> img{
     width:50%;
     height: 50%;
     border-radius: 20px;
