--- a/Ebackend/template/index.html
+++ b/Ebackend/template/index.html
@@ -14,18 +14,24 @@
             </h1>
             <img src="../static/img/sofa1.jpg" alt="furniture">
             <span class="mordern-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, aut!</span>
+            <h6 id="price">$50</h6>
             <!-- submitting form -->
             <form action="{%url 'checkout'%}" method="get" class="desc-btn">
-                <input type="hidden" name="product_id" value="1" >
-                <input type="submit" class="buy">Buy Now</a>
+                <input type="hidden" name="product_id" value="1" style="display: none;" >
+                <input type="submit" class="buy" value="Buy Now">
             </form>
         </div>
 
         <div class="big-img">
-            <a href="" id="img-link">
-                <img src="../static/img/sofa2.jpg" alt="Child sofa">
-                <p class="how-it-works">How it works?</p>
-            </a>
+            <img src="../static/img/sofa2.jpg" alt="Child sofa">
+            <p class="how-it-works" onmouseover="howItWorks()">
+                How it works?
+                <p class="detail">
+                    One of the best sofa you could ever get for your kids.
+                    Trust us, you'd always be their favourite if they grow
+                    up sitting on this!
+                </p>
+            </p>
         </div>
     </div>
     <!-- other parts -->
