--- a/Ebackend/static/css/signin_nd_up.css
+++ b/Ebackend/static/css/signin_nd_up.css
@@ -146,3 +146,54 @@ div.sign-up-guide{
     margin-top: 10%;
     margin-bottom:-9%;
 }
+
+/* checkout page */
+
+/*parent div*/  .cart-order{
+    display:flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10%;
+}
+
+/*form parent*/.shipping-addr{
+    width:60%;
+    height: fit-content;
+    padding: 20px;
+}
+
+/*form itself*/.ship-form{
+width: fit-content;
+padding: 30px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+border: 2px solid lightblue;
+border-radius: 10px;
+}
+
+.ship-form > #submit{
+margin: auto;
+}
+
+.check-cont{
+margin:8px;
+display: flex;
+flex-flow: row wrap;
+justify-content: center;
+align-items: center;
+text-align: left;
+}
+.check-cont > input{
+width:100%;
+height: 30px;
+border:solid orange 1px;
+border-radius: 15px;
+padding:auto;
+text-align: center;
+width:fit-content;
+margin: auto;
+margin-left: 15px;
+}
