--- a/Ebackend/template/checkout.html
+++ b/Ebackend/template/checkout.html
@@ -80,7 +80,7 @@
     </div>
     <div class="your-order">
         {%if user.is_authenticated%} 
-        <p id="your-order">Your Order</p>
+        <p id="your-order">{%if request.GET.product_id%}Your Order{%else%}Your last viewed item{%endif%}</p>
         <img src="{{product.product_image.url}}" alt="your item" id="p-img">
         {%endif%}
     </div>
