--- a/Ebackend/template/base.html
+++ b/Ebackend/template/base.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="../static/css/style.css" type="text/css">
         <link rel="stylesheet" href="../static/css/signin_nd_up.css">
         <link rel="icon" type="img/jpg" href="">
+        <script src="https://kit.fontawesome.com/c676ebde69.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
@@ -26,7 +27,7 @@
             <!-- icon -->
             <div class="icon">
                 <i class="fa-solid fa-magnifying-glass"></i>
-                <i class="fa-duotone fa-cart-shopping"></i>
+                <i class="fa-solid fa-cart-shopping"></i>
                 <i class="fa-solid fa-bell"></i>
             </div>
             <!-- hamburgger -->
@@ -69,5 +70,4 @@
         </div>
     </footer>
     <script src="../static/js/index.js"></script>
-    <script src="https://kit.fontawesome.com/b7a792697d.js" crossorigin="anonymous"></script>
 </html>
